# argocd-helm-example

./: Cargo.toml  Dockerfile  argo.yaml  build.rs
chart/: Chart.yaml  values.yaml
chart/templates/: istio-vservice.yaml
proto/: hello.proto
src/: main.rs
