[package]
name = "argocd-helm-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.0"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tonic = "0.8.1"
tonic-reflection = "0.5.0"

[build-dependencies]
tonic-build = "0.8.0"
